--- a/namazu.spec.in
+++ b/namazu.spec.in
@@ -109,6 +109,8 @@ rm -rf $RPM_BUILD_DIR/%{name}-%{version}/doc/ja/Makefile*
 %{_bindir}/mailutime
 %{_bindir}/nmzgrep
 %{_bindir}/nmzmerge
+%{_bindir}/nmzcat
+%{_bindir}/nmzegrep
 %{_libdir}/*.so.*
 %{_mandir}/man1/*
 %{_datadir}/namazu/filter/*
@@ -131,6 +133,9 @@ rm -rf $RPM_BUILD_DIR/%{name}-%{version}/doc/ja/Makefile*
 
 
 %changelog
+* Fri Jun 02 2006 Tadamasa Teranishi <yw3t-trns@asahi-net.or.jp>
+- add nmzcat, nmzegrep.
+
 * Wed Apr 21 2004 Tadamasa Teranishi <yw3t-trns@asahi-net.or.jp> 2.0.13-1
 - remove patch files. (linguas, newgettext3, namazu-2.0.12-de.diff, fixinutf8)
 - remove filter-requires-namazu.sh.
