--- a/namazu.spec.in
+++ b/namazu.spec.in
@@ -47,7 +47,7 @@ A CGI interface for Namazu.
 LC_ALL=C
 export LC_ALL
 echo "#!/bin/sh" > %{_tmppath}/filter-requires-namazu.sh
-echo "%{__find_requires} $* | grep -v 'perl(nmzidx.pl)'" >> %{_tmppath}/filter-requires-namazu.sh
+echo "%{__find_requires} $* | egrep -v 'perl\((nmzidx|conf|document|time|util|var).pl\)'" >> %{_tmppath}/filter-requires-namazu.sh
 chmod +x %{_tmppath}/filter-requires-namazu.sh
 %define __find_requires %{_tmppath}/filter-requires-namazu.sh
 
@@ -135,6 +135,7 @@ rm -rf $RPM_BUILD_DIR/%{name}-%{version}/doc/ja/Makefile*
 %changelog
 * Fri Jun 02 2006 Tadamasa Teranishi <yw3t-trns@asahi-net.or.jp>
 - add nmzcat, nmzegrep.
+- fix filter-requires-namazu.sh.
 
 * Wed Apr 21 2004 Tadamasa Teranishi <yw3t-trns@asahi-net.or.jp> 2.0.13-1
 - remove patch files. (linguas, newgettext3, namazu-2.0.12-de.diff, fixinutf8)
