*** empty log message ***

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -41,7 +41,9 @@ filter_DATA = bzip2.pl \
 	      mp3.pl \
 	      macbinary.pl \
 	      applefile.pl \
-	      pipermail.pl
+	      pipermail.pl \
+	      gnumeric.pl \
+	      zip.pl
 
 EXTRA_DIST = $(filter_DATA)
 
