*** empty log message ***

--- a/tests/.cvsignore
+++ b/tests/.cvsignore
@@ -1,1 +1,28 @@
 Makefile.in
+idx1
+idx2
+idx3
+idx4
+idx5
+idx6
+idx7
+idx8
+idx9
+idx10
+idx11
+idx12
+idx13
+idx14
+idx15
+idx16
+idx17
+idx18
+idx19
+idx20
+idx21
+ja-idx1
+ja-idx2
+ja-idx3
+test-log
+tmp-data
+
