--- a/pl/filter.pl.in
+++ b/pl/filter.pl.in
@@ -2,7 +2,7 @@
 # -*- Perl -*-
 # filter.pl - class for filter
 #
-# $Id: filter.pl.in,v 1.5 2005-01-23 13:00:34 opengl2772 Exp $
+# $Id: filter.pl.in,v 1.6 2006-08-12 05:45:03 opengl2772 Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2000-2004 Namazu Project All rights reversed.
@@ -194,8 +194,7 @@ sub _get_supported_list {
 
 sub _codeconv_document ($) {
     my ($textref) = @_;
-    #codeconv::to_inner_encoding($textref, 'unknown');
-    codeconv::toeuc($textref);
+    codeconv::to_inner_encoding($textref, 'unknown');
     $$textref =~ s/\r\n/\n/g;
     $$textref =~ s/\r/\n/g;
     $$textref =~ tr/\x01-\x08\x0b-\x0c\x0e-\x1f\x7f/ /; # Remove control char.
