--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.171 2006-01-24 09:17:15 opengl2772 Exp $
+dnl $Id: configure.in,v 1.172 2006-08-12 07:27:53 opengl2772 Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -91,7 +91,10 @@ AC_SUBST(LTVERSION)
 dnl *
 dnl * I18N
 dnl *
-ALL_LINGUAS="ja ja_JP.SJIS es fr"
+ALL_LINGUAS="ja ja_JP.SJIS ja_JP.utf8 es fr"
+
+AM_ICONV
+
 AM_GNU_GETTEXT([external])
 AM_LC_MESSAGES
 
@@ -242,35 +245,51 @@ if test $PERL = "no" || $PERL -e 'exit ($] >= 5.004)'; then
 fi
 
 AC_MSG_CHECKING(for NKF perl module)
-if $PERL -e "use lib '$PMDIR'; use NKF;" >/dev/null 2>&1; then
+if $PERL -e 'exit ($] < 5.008)'; then
+    NKF=module_encode
+    AC_MSG_RESULT(yes)
+elif $PERL -e "use lib '$PMDIR'; use NKF 2.00;" >/dev/null 2>&1; then
     NKF=module_nkf
     AC_MSG_RESULT(yes)
 else
     AC_MSG_RESULT(no)
     AC_PATH_PROG(NKF,nkf, no)
+    if test "$NKF" != "no"; then
+        if $NKF --version 2>&1 | $PERL -ne ' /Version\s+(\d)\.\d/; exit ($1>=2)'; then
+            NKF=no
+        fi
+    fi
 fi
 if test "$NKF" = "no"; then
-    AC_MSG_WARN(NKF (network kanji filter) not found)
+    AC_MSG_WARN(Encode and NKF2 (network kanji filter) not found)
 fi
 
-AC_MSG_CHECKING(for Text::Kakasi perl module)
-if $PERL -e "use lib '$PMDIR'; use Text::Kakasi;" >/dev/null 2>&1; then
-    KAKASI=module_kakasi
+AC_MSG_CHECKING(for Text::Kakasi 2.0 perl module)
+if $PERL -e "use lib '$PMDIR'; use Text::Kakasi 2.0;" >/dev/null 2>&1; then
+    KAKASI_UTF8=module_kakasi
     AC_MSG_RESULT(yes)
 else
     AC_MSG_RESULT(no)
-    AC_PATH_PROG(KAKASI,kakasi, no)
+    AC_PATH_PROG(KAKASI_UTF8, kakasi, no)
 fi
 
-AC_MSG_CHECKING(for Text::ChaSen perl module)
-if $PERL -e "use lib '$PMDIR'; use Text::ChaSen;" >/dev/null 2>&1; then
-    CHASEN=module_chasen
-    AC_MSG_RESULT(yes)
-else
-    AC_MSG_RESULT(no)
-    AC_PATH_PROG(CHASEN,chasen, no)
+AC_PATH_PROG(CHASEN_UTF8, chasen, no)
+if test "$CHASEN_UTF8" != "no"; then
+    if $CHASEN_UTF8 -V 2>&1 | $PERL -ne ' /version\s+(\d)\.(\d)\.(\d)/; exit ($1*100+$2*10+$3>=231)'; then
+        AC_MSG_RESULT(no)
+        CHASEN_UTF8=no
+    else
+        AC_MSG_CHECKING(for Text::ChaSen perl module)
+        if $PERL -e "use lib '$PMDIR'; use Text::ChaSen;" >/dev/null 2>&1; then
+            CHASEN_UTF8=module_chasen
+            AC_MSG_RESULT(yes)
+        else
+            AC_MSG_RESULT(no)
+        fi
+    fi
 fi
 
+AC_PATH_PROG(MECAB, mecab, no)
 AC_MSG_CHECKING(for MeCab perl module)
 if $PERL -e "use lib '$PMDIR'; use MeCab;" >/dev/null 2>&1; then
     MECAB=module_mecab
@@ -280,41 +299,44 @@ else
     AC_PATH_PROG(MECAB,mecab, no)
 fi
 
-AC_MSG_CHECKING(for default wakatigaki processor)
+AC_MSG_CHECKING(for default utf-8 wakatigaki processor)
 OPT_WAKATI_DEFAULT=none
 if test "$KAKASI" != "no"; then
     OPT_WAKATI_DEFAULT=KAKASI
-elif test "$CHASEN" != "no"; then
+elif test "$CHASEN_UTF8" != "no"; then
     OPT_WAKATI_DEFAULT=CHASEN
 elif test "$MECAB" != "no"; then
     OPT_WAKATI_DEFAULT=MECAB
 else
+    AC_MSG_WARN(KAKASI or ChaSen or MeCab are required to handle Japanese)
     OPT_WAKATI_DEFAULT="module_builtin"
 fi
+
 AC_MSG_RESULT($OPT_WAKATI_DEFAULT)
 AC_SUBST(OPT_WAKATI_DEFAULT)
 
-if test "$KAKASI" = "no"; then
-    DO_KAKASI="no"
+if test "$KAKASI_UTF8" = "no"; then
+    DO_KAKASI_UTF8="no"
 else
-    DO_KAKASI="$KAKASI -ieuc -oeuc -w"
+    DO_KAKASI_UTF8="$KAKASI_UTF8 -iutf8 -outf8 -w"
 fi
-if test "$CHASEN" = "no"; then
-    DO_CHASEN="no"
-    DO_CHASEN_NOUN="no"
+if test "$CHASEN_UTF8" = "no"; then
+    DO_CHASEN_UTF8="no"
+    DO_CHASEN_NOUN_UTF8="no"
 else
-    DO_CHASEN="$CHASEN -i e -j -F \\\"\%m \\\""
-    DO_CHASEN_NOUN="$CHASEN -i e -j -F \\\"\%m %H\\\\n\\\""
+    DO_CHASEN_UTF8="$CHASEN_UTF8 -i w -j -F '\%m '"
+    DO_CHASEN_NOUN_UTF8="$CHASEN_UTF8 -i w -j -F '\%m %H\\\\n'"
 fi
 if test "$MECAB" = "no"; then
-    DO_MECAB="no"
+    DO_MECAB_UTF8="no"
 else
-    DO_MECAB="$MECAB -Owakati -b 8192"
+    DO_MECAB_UTF8="$MECAB -O wakati -b 8192"
 fi
-AC_SUBST(DO_KAKASI)
-AC_SUBST(DO_CHASEN)
-AC_SUBST(DO_CHASEN_NOUN)
-AC_SUBST(DO_MECAB)
+
+AC_SUBST(DO_KAKASI_UTF8)
+AC_SUBST(DO_CHASEN_UTF8)
+AC_SUBST(DO_CHASEN_NOUN_UTF8)
+AC_SUBST(DO_MECAB_UTF8)
 
 case "$host_os" in
     mingw*)
@@ -493,7 +515,6 @@ AC_OUTPUT([Makefile
 	   tests/data/decodebase64/Makefile
 	   tests/data/ja-wakati/Makefile
 	   pltests/Makefile
-	   wakatidict/Makefile
 	  ],
 	  [chmod +x nmz-config \
 	    ]) 
