* pl/*, filter/*, scripts/*: Synced from development-2-1 changes 2006-02-01 to 2006-08-11.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -85,7 +85,7 @@ $REMAIN_HEADER = "From|Date|Message-ID";
 # This pattern specifies fields which used for field-specified 
 # searching.  NOTE: case-insensitive
 # 
-$SEARCH_FIELD = "message-id|subject|from|date|uri|newsgroups|to|summary|size|utc|duri";
+$SEARCH_FIELD = "message-id|subject|from|date|uri|newsgroups|to|summary|size|utc|mtype|duri";
 
 #
 # This pattern specifies meta tags which used for field-specified 
