--- a/pl/filter.pl.in
+++ b/pl/filter.pl.in
@@ -2,7 +2,7 @@
 # -*- Perl -*-
 # filter.pl - class for filter
 #
-# $Id: filter.pl.in,v 1.6 2006-08-12 05:45:03 opengl2772 Exp $
+# $Id: filter.pl.in,v 1.7 2006-08-23 15:11:00 usu Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2000-2004 Namazu Project All rights reversed.
@@ -88,7 +88,7 @@ sub apply_filter {
     # Pre code conversion.
     if ($REQUIRE_PRE_CODECONV{$mtype}) {
 	util::dprint("pre_codeconv\n");
-	_codeconv_document($contentref);
+	codeconv::codeconv_document($contentref);
     }
 
     util::vprint("mtype = $mtype\n");
@@ -128,7 +128,7 @@ sub apply_filter {
 	# Post code conversion.
 	if ($REQUIRE_POST_CODECONV{$mtype}) {
 	    util::dprint("post_codeconv\n");
-	    _codeconv_document($contentref);
+	    codeconv::codeconv_document($contentref);
 	}
 
 	if ($RECURSIVE_ACTIONS{$mtype}) {
@@ -190,14 +190,6 @@ sub _get_supported_list {
     }
     $list .= $supported_list;
     return $list;
-}
-
-sub _codeconv_document ($) {
-    my ($textref) = @_;
-    codeconv::to_inner_encoding($textref, 'unknown');
-    $$textref =~ s/\r\n/\n/g;
-    $$textref =~ s/\r/\n/g;
-    $$textref =~ tr/\x01-\x08\x0b-\x0c\x0e-\x1f\x7f/ /; # Remove control char.
 }
 
 sub _load_filtermodules ($){
