--- a/scripts/nmzmerge.in
+++ b/scripts/nmzmerge.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 #
-# $Id: nmzmerge.in,v 1.7 2006-08-18 17:36:23 opengl2772 Exp $
+# $Id: nmzmerge.in,v 1.8 2006-10-14 14:14:12 opengl2772 Exp $
 #
 # nmzmerge.pl - program to merge index
 #         by furukawa@tcp-ip.or.jp
@@ -124,8 +124,8 @@ sub nmzmerge{
     $nmz0->write_status($nmz1);
 
     if (my $log = $nmz0->log_open("[Merge]")){
-        $log->printf("%-20s %d\n", "Total Documents:", util::commas($nmz0->{'flist'}->{'offset'}));
-        $log->printf("%-20s %d\n", "Total Keywords:", util::commas($nmz0->{'word'}->{'offset'}));
+        $log->printf("%-20s %s\n", "Total Documents:", util::commas($nmz0->{'flist'}->{'offset'}));
+        $log->printf("%-20s %s\n", "Total Keywords:", util::commas($nmz0->{'word'}->{'offset'}));
         $nmz0->log_close;
     }
 
