* filter/msofficexml.pl: Added new fiter. * filter/Makefile.am: Added an entry for msofficexml.pl. * tests/data/ja/Makefile.am: Added new files. * pl/conf.pl.in ($AlLOW_FILES, %USE_FILERS): Added extensions   of MS-OfficeOpenXML.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -43,6 +43,7 @@ filter_DATA = bzip2.pl \
 	      applefile.pl \
 	      pipermail.pl \
 	      gnumeric.pl \
+	      msofficexml.pl \
 	      zip.pl
 
 EXTRA_DIST = $(filter_DATA)
