--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -32,6 +32,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.tex|.*\\.dvi" .   	   # TeX, DVI
 		"|.*\\.rpm|.*\\.deb" .   	   # RPM, DEB
 		"|.*\\.doc|.*\\.xls|.*\\.pp[st]" . # Word, Excel, PowerPoint
+		"|.*\\.docx|.*\\.xlsx|.*\\.pp[st]x" . # MS-OfficeOpenXML Word, Excel, PowerPoint
                 "|.*\\.vs[dst]|.*\\.v[dst]x" .     # Visio
 		"|.*\\.j[sabf]w|.*\\.jtd" .        # Ichitaro 4, 5, 6, 7, 8
 		"|.*\\.sx[widc]" .                 # OpenOffice Writer,Calc,Impress,Draw
@@ -271,6 +272,7 @@ $TARGET_FILESYS_CODING = 'euc-jp';
   'application/vnd.oasis.opendocument.spreadsheet' => ['ooo.pl'],
   'application/vnd.oasis.opendocument.presentation' => ['ooo.pl'],
   'application/vnd.oasis.opendocument.graphics' => ['ooo.pl'],
+  'application/vnd.openxmlformats-officedocument' => ['msofficexml.pl'],
   'application/x-apache-cache' => ['apachecache.pl'],
   'application/x-bzip2' => ['bzip2.pl'],
   'application/x-compress' => ['compress.pl'],
