* filter/msofficexml.pl, filter/win32/ole*.pl: Change mime-type. * pl/conf.pl: ditto.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -272,7 +272,9 @@ $TARGET_FILESYS_CODING = 'euc-jp';
   'application/vnd.oasis.opendocument.spreadsheet' => ['ooo.pl'],
   'application/vnd.oasis.opendocument.presentation' => ['ooo.pl'],
   'application/vnd.oasis.opendocument.graphics' => ['ooo.pl'],
-  'application/vnd.openxmlformats-officedocument' => ['msofficexml.pl'],
+  'application/vnd.openxmlformats-officedocument.wordprocessingml' => ['msofficexml.pl', 'win32/olemsword.pl'],
+  'application/vnd.openxmlformats-officedocument.spreadsheetml' => ['msofficexml.pl', 'win32/oleexcel.pl'],
+  'application/vnd.openxmlformats-officedocument.presentationml' => ['msofficexml.pl', 'win32/olepowerpoint.pl'],
   'application/x-apache-cache' => ['apachecache.pl'],
   'application/x-bzip2' => ['bzip2.pl'],
   'application/x-compress' => ['compress.pl'],
