* filter/{visio.pl, Makefile.am}: Added a new file. visio exclusion filter. * pl/conf.pl.in: The entry of visio is added to USE_FILTERS.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -44,6 +44,7 @@ filter_DATA = bzip2.pl \
 	      pipermail.pl \
 	      gnumeric.pl \
 	      msofficexml.pl \
+	      visio.pl \
 	      zip.pl
 
 EXTRA_DIST = $(filter_DATA)
