--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -58,6 +58,6 @@ EXTRA_DIST  =   acrobat3.pdf \
 		ooimpress.odp \
 		oowriter.odt \
 		visio2002.vsd \
-		msdocumentimaging.mdi \
+		xps.xps \
 		zip.zip
 
