*filter/xps.pl: Change codeconv parameter. *tests/data/ja/xps.xps: Add a new file.

--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -58,6 +58,7 @@ EXTRA_DIST  =   acrobat3.pdf \
 		ooimpress.odp \
 		oowriter.odt \
 		visio2002.vsd \
+		msdocumentimaging.mdi \
 		xps.xps \
 		zip.zip
 
