--- a/scripts/nmzcat.in
+++ b/scripts/nmzcat.in
@@ -3,7 +3,7 @@
 # -*- Perl -*-
 # nmzcat - print file content on the standard output.
 #
-# $Id: nmzcat.in,v 1.5 2006-08-12 07:26:20 opengl2772 Exp $
+# $Id: nmzcat.in,v 1.6 2007-02-10 05:42:53 usu Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2004 Namazu Project All rights reserved.
@@ -69,16 +69,21 @@ foreach my $fname (@ARGV) {
     util::dprint("read file: $fname\n");
 
     $Document->init_doc($uri, $fname, \$content, undef);
-    my $orig_filename = $Document->get_orig_filename();
-    my $author = $Document->get_field_info('author');
-    my $title = $Document->get_field_info('title');
-    my $contref= $Document->get_filtered_contentref();
-    my $mimetype = $Document->get_mimetype();
-    my $result = "filename: $orig_filename\n";
-    $result .= "mimetype: $mimetype\n";
-    $result .= "author  : $author\n";
-    $result .= "title   : $title\n";
-    $result .= "content :\n$$contref\n";
+    my $result='';
+    unless ($err) {
+        my $orig_filename = $Document->get_orig_filename();
+        my $author = $Document->get_field_info('author');
+        my $title = $Document->get_field_info('title');
+        my $contref= $Document->get_filtered_contentref();
+        my $mimetype = $Document->get_mimetype();
+        $result = "filename: $orig_filename\n";
+        $result .= "mimetype: $mimetype\n";
+        $result .= "author  : $author\n";
+        $result .= "title   : $title\n";
+        $result .= "content :\n$$contref\n";
+    }else {
+        $result .= $err . "\n";
+    }
     codeconv::to_external_encoding(\$result);
     print $result;
 }
